--- a/index.html
+++ b/index.html
@@ -672,8 +672,16 @@ body.bedtime .float-tts-btn.paused { background: #4a8a5a; }
     <div class="card" style="text-align:center;">
       <div style="font-size:3rem;margin-bottom:12px;">📖</div>
       <div class="card-title" style="margin-bottom:8px;">Welcome to ReadUp!</div>
-      <p style="color:var(--body);font-weight:700;font-size:1rem;line-height:1.6;margin-bottom:6px;">A free reading fluency app for kids in Pre-K through 3rd grade.</p>
-      <p style="color:var(--muted);font-weight:700;font-size:0.88rem;line-height:1.5;margin-bottom:16px;">Built by <strong style="color:var(--purple-deep);">Transforming Youth, Inc.</strong> to help every child become a confident reader — whether at home, in a classroom, or on the go.</p>
+      <p style="color:var(--body);font-weight:700;font-size:1rem;line-height:1.6;margin-bottom:6px;">A free reading &amp; spelling app for kids in Pre-K through 3rd grade.</p>
+      <p style="color:var(--muted);font-weight:700;font-size:0.88rem;line-height:1.5;margin-bottom:12px;">Built by <strong style="color:var(--purple-deep);">Transforming Youth, Inc.</strong> to help every child become a confident reader and speller.</p>
+      <div style="background:var(--section);border-radius:16px;padding:14px;text-align:left;margin-bottom:14px;">
+        <p style="font-weight:800;color:var(--purple);font-size:0.88rem;margin-bottom:8px;">Here's what your child can do:</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:6px;">✨ <strong style="color:var(--ink);">AI Stories</strong> — Brand new stories every time, on 18+ topics</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:6px;">📸 <strong style="color:var(--ink);">Upload a Passage</strong> — Snap a photo of any page and read along</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:6px;">📝 <strong style="color:var(--ink);">Spelling Words</strong> — Upload a list, study, practice, and take quizzes</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:6px;">📖 <strong style="color:var(--ink);">Read Together</strong> — Read with a friend from any device</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;">🔊 <strong style="color:var(--ink);">Word-by-Word Tracking</strong> — Words highlight as they're read aloud</p>
+      </div>
       <button class="btn-main btn-green" id="btn-welcome-next-1" style="font-size:1.1rem;">Next →</button>
     </div>
   </div>
@@ -685,29 +693,31 @@ body.bedtime .float-tts-btn.paused { background: #4a8a5a; }
       <p style="color:var(--body);font-weight:700;font-size:0.92rem;line-height:1.6;margin-bottom:10px;">Research shows that reading a story <strong style="color:var(--purple);">3 times</strong> is one of the fastest ways to build reading fluency.</p>
       <div style="background:var(--section);border-radius:16px;padding:14px;text-align:left;margin-bottom:12px;">
         <p style="font-weight:800;color:var(--green);font-size:0.88rem;margin-bottom:6px;">▶ Read #1 — Listen &amp; follow along</p>
-        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">The teacher reads while words highlight. Your child sees and hears every word.</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">The teacher reads while words light up yellow. Your child sees and hears every word.</p>
         <p style="font-weight:800;color:var(--purple);font-size:0.88rem;margin-bottom:6px;">▶ Read #2 — Read together</p>
-        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">Your child reads along with the teacher. Familiar words come faster.</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">Your child reads along with the teacher voice. Familiar words come faster.</p>
         <p style="font-weight:800;color:var(--purple-dark);font-size:0.88rem;margin-bottom:6px;">▶ Read #3 — Read on your own</p>
-        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;">Your child reads independently. Confidence builds with every word.</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;">Your child reads independently and records their own reading speed!</p>
       </div>
-      <p style="color:var(--muted);font-weight:700;font-size:0.82rem;line-height:1.5;">AI creates a <strong>brand new story</strong> every time based on your child's interests and grade level. Double-tap any word to hear it spoken.</p>
+      <p style="color:var(--muted);font-weight:700;font-size:0.82rem;line-height:1.5;">This works for AI-generated stories <strong>and</strong> pages you upload from books or worksheets. Tap any word to hear it and learn what it means!</p>
       <button class="btn-main btn-green" id="btn-welcome-next-2" style="font-size:1.1rem;">Next →</button>
     </div>
   </div>
 
   <div class="screen" id="screen-welcome-3" style="display:none;">
     <div class="card" style="text-align:center;">
-      <div style="font-size:3rem;margin-bottom:12px;">👤</div>
-      <div class="card-title" style="margin-bottom:8px;">For Parents</div>
-      <p style="color:var(--body);font-weight:700;font-size:0.92rem;line-height:1.6;margin-bottom:12px;">ReadUp! tracks your child's progress so you don't have to hover.</p>
+      <div style="font-size:3rem;margin-bottom:12px;">📝</div>
+      <div class="card-title" style="margin-bottom:8px;">Spelling &amp; Study Tools</div>
+      <p style="color:var(--body);font-weight:700;font-size:0.92rem;line-height:1.6;margin-bottom:10px;">ReadUp! isn't just for reading — it's a complete study companion!</p>
       <div style="background:var(--section);border-radius:16px;padding:14px;text-align:left;margin-bottom:12px;">
-        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">📊 Parent Dashboard</p>
-        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">See stories read, time spent, favorite topics, and words your child needed help with.</p>
-        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">🔒 PIN Protected</p>
-        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">Default PIN is <strong style="color:var(--purple);">1234</strong>. You can change it in the dashboard settings.</p>
-        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">📍 Where to find it</p>
-        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;">Tap <strong>"Parent"</strong> at the bottom of the screen anytime.</p>
+        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">📸 Upload Spelling Words</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">Take a photo of any spelling list. ReadUp! reads the words and creates definitions automatically.</p>
+        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">📖 Study Mode</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">Full-screen view of every word with syllables and meanings. Tap to hear them spoken.</p>
+        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">🎯 Practice &amp; Quiz</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">Multiple choice practice, then a real spelling quiz where your child types each word from scratch.</p>
+        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">📖 Reading Mode</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;">Full-screen reading with play/pause controls — great for reading along on a big screen.</p>
       </div>
       <button class="btn-main btn-green" id="btn-welcome-next-3" style="font-size:1.1rem;">Next →</button>
     </div>
@@ -715,9 +725,18 @@ body.bedtime .float-tts-btn.paused { background: #4a8a5a; }
 
   <div class="screen" id="screen-welcome-4" style="display:none;">
     <div class="card" style="text-align:center;">
-      <div style="font-size:3rem;margin-bottom:12px;">🚀</div>
-      <div class="card-title" style="margin-bottom:8px;">Let's Get Started!</div>
-      <p style="color:var(--body);font-weight:700;font-size:0.92rem;line-height:1.6;margin-bottom:16px;">Pick your child's grade level to begin:</p>
+      <div style="font-size:3rem;margin-bottom:12px;">👤</div>
+      <div class="card-title" style="margin-bottom:8px;">For Parents &amp; Teachers</div>
+      <p style="color:var(--body);font-weight:700;font-size:0.92rem;line-height:1.6;margin-bottom:12px;">ReadUp! tracks progress so you can see how your child is growing.</p>
+      <div style="background:var(--section);border-radius:16px;padding:14px;text-align:left;margin-bottom:12px;">
+        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">📊 Parent Dashboard</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">See stories read, time spent, favorite topics, and words your child needed help with.</p>
+        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">🔒 PIN Protected</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">Default PIN is <strong style="color:var(--purple);">1234</strong>. Change it anytime in the dashboard.</p>
+        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">🏠 Easy Navigation</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;">The <strong>Home</strong> button is always at the bottom. Your child can get back anytime.</p>
+      </div>
+      <p style="color:var(--body);font-weight:700;font-size:0.92rem;line-height:1.6;margin-bottom:16px;">Pick your child's grade level to get started:</p>
       <div class="option-row" id="welcome-grade-row" style="justify-content:center;">
         <button class="opt-btn" data-wgrade="prek" style="min-width:60px;">Pre-K</button>
         <button class="opt-btn" data-wgrade="k" style="min-width:60px;">K</button>
@@ -725,7 +744,7 @@ body.bedtime .float-tts-btn.paused { background: #4a8a5a; }
         <button class="opt-btn" data-wgrade="2" style="min-width:60px;">2nd</button>
         <button class="opt-btn" data-wgrade="3" style="min-width:60px;">3rd</button>
       </div>
-      <button class="btn-main btn-green" id="btn-welcome-go" style="font-size:1.1rem;margin-top:16px;" disabled>✨ Start Reading!</button>
+      <button class="btn-main btn-green" id="btn-welcome-go" style="font-size:1.1rem;margin-top:16px;" disabled>✨ Let's Go!</button>
     </div>
   </div>
 
